# Custom-Contact-Manager-Frappe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
customer_app/: hooks.py  modules.txt
customer_app/customer_contact_manager/doctype/contactmanager/: contactmanager.js  contactmanager.json  contactmanager.py  test_contactmanager.py
